# catt

./: .gitignore  .ocamlformat  CHANGES.md  LICENSE  META.catt.template  Makefile  README.md  catt-mode.el  catt-web.opam  catt.html  catt.js  catt.opam  check_all.sh  coq-catt-plugin.opam  default.nix  dependencies.export  dune-project  dune-workspace  dune-workspace.dev  flake.nix  index.html
.github/workflows/: publish.yml  test.yml
agda/: Prelude.agda  Syntax.agda
artefacts/: counts  cylstackdim3  eh-from-hott
coq-plugin/: _CoqProject
coq-plugin/src/: META.catt  catt.ml  catt_plugin.mlpack  dune  export.ml  g_catt.mlg
coq-plugin/theories/: Loader.v  Test.v
coq_plugin/: .Makefile.coq.d  META.catt  _CoqProject
coq_plugin/catt-vs-hott/: EHCaTT.v  EHHoTT.v  eh-from-catt  eh-hott-christensen  run-experiment.sh
demo/: tutorial_atct.catt
docs/: catt.css  catt.js  examples.html  index.html
examples/: cones.catt  cylinders.catt  demo-hott.catt  double-braiding-dim4.catt  eckmann-hilton.catt  eh-builtin.catt  functoriality.catt  horizontalinverses.catt  live-hott.catt  naturality.catt  new.catt  sandwich.catt  strengthening-equivalence.catt  syllepsis.catt  test.catt
experiment/: run-cylinders-dim4.sh  run-experiment.sh
lib/: builtin.ml  builtin.mli  command.ml  command.mli  common.ml  common.mli  cone_phases.ml  cones.ml  cones.mli  construct.ml  construct.mli  cubical_composite.ml  cubical_composite.mli  cylinders.ml  cylinders.mli  display_maps.ml  dune  eh.ml  eh.mli  elaborate.ml  elaborate.mli  elaborate_wk.mli  environment.ml  environment.mli  equality.ml  equality.mli  error.ml  error.mli  functorialisation.ml  functorialisation.mli  gassoc.ml  infer_suspension.ml  infer_suspension.mli  inverse.ml  inverse.mli  io.ml  io.mli  kernel.ml  kernel.mli  lexer.mll  (+44 more)
new/: Makefile  infer.ml  pS.ml  prover.ml  stdlib.ml
notes/: Makefile  functor.tex  idee.aux  idee.tex  macros.sty  notes.aux  notes.tex
old/: Makefile  README.md  catt.ml  common.ml  lang.ml  lexer.mll  parser.mly  prover.ml  stdlib.ml  test.catt  test2.catt
pages/: catt.js
src/: #env.ml#  #infer.ml#  #parser.mly#  #syntax.ml#  .#lexer.mll  Makefile  catt.html  catt.ml  command.ml  common.ml  ctx.ml  debug  env.ml  extSyntax.ml  failparser.mly  gassoc.ml  infer.ml  kernel.ml  kernel.mli  lexer.mll  macrosEnvironnement.ml  pS.ml  pShape.ml  parsebis.mly  parser.conflicts  parser.mly  print.ml  prover.ml  ps.ml  settings.ml  std.ml  stdlib.ml  syntax.ml  test.catt  unravel.ml  var.ml  web.ml
test/: Makefile  bug.catt  builtin-comp.catt  cones.catt  coq_plugin.catt  functorialisation.catt  functoriality.catt  implicit_subs.catt  inverses.catt  issue7.catt  naturality.catt  pretty-print.catt  ps-syntax.catt  suspension.catt  test.catt  vanilla.catt  wildcards.catt
test.t/: functorialisation.catt  run.t  suspension.catt  test.catt  wildcards.catt
web/: _tmp_dune  catt.css  dune  examples.html  index.html  web.ml
(+122 files in other folders)
